tests/init_state/cfg_shape/borrow_across_cfg_shapes_violations.err.expected
error: at 27:5: [INIT-RefObligationUnfulfilled] In function 'out_ref_unfulfilled_on_return_arm', block 'entry__to__b_arm': reference 'r' has unfulfilled obligation: pointee is uninitialized, but must be initialized before the reference expires
    |
 27 |     switchEnum(e) [A: a_arm, B: b_arm]
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = note: reference declared here
    |
 25 | fn out_ref_unfulfilled_on_return_arm(r: &out i64, e: E) {
    |                                      ^^^^^^^^^^^
